--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@
     <h5 class="footer_title pt2">FOLLOW US</h5>
         <div class="cover">
   <ul>
-    <li class="facebook"><a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
-    <li class="twitter"><a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
-    <li class="instagram"><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
-    <li class="whatsapp"><a href="#"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></li>
+    <li class="facebook"><a href="#"><i class="fa-brands fa-facebook-f fa-2x" aria-hidden="true"></i></a></li>
+    <li class="twitter"><a href="#"><i class="fa-brands fa-x-twitter fa-2x" aria-hidden="true"></i></a></li>
+    <li class="instagram"><a href="#"><i class="fa-brands fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+    <li class="whatsapp"><a href="#"><i class="fa-brands fa-whatsapp fa-2x" aria-hidden="true"></i></a></li>
   </ul>
 </div>
     </div>
