--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
     <meta name="description" content="Qweb is the best web design and development company in Doha, Qatar. Our services includes website designing,mobile app development,SEO,advertising,logo and branding,digital marketing.">
     <meta name="keywords" content="web hosting,web design qatar,web design doha,website designing doha,logo design qatar,SEO company qatar,internet marketing qatar">
-    <meta name="author" content="Qhost">
+    <meta name="author" content="TIDJANE Mohammed">
     <meta name="abstract" content="web hosting,web design qatar, web design company in qatar,web designer qatar,web design doha ,seo company qatar,web design companies in qatar,website design qatar">
 
 </head>
